# inference

./: .env.example  README.md  pyproject.toml
app/: README.md  config.py  main.py
app/ai/schemas/: classifier_prediction_schema.py  incident_suggestion_schema.py
app/ai/services/: classifier_service.py  instructor_service.py
app/incidents/: incidents_router.py
app/incidents/dto/: detect_incident_dto.py  generate_incident_suggestion_dto.py
app/incidents/responses/: generate_incident_suggestion_response.py
app/incidents/services/: incident_detection_service.py  incident_suggestion_service.py
app/models/: draft_generator_model.py  generic_draft_generator_model.py  mock_draft_generator_model.py  ollama_draft_generator_model.py
app/routers/: chat.py
app/schemas/: chat.py  detect_incident_response.py  generate_incident_draft_response.py  incident_draft.py
app/services/: chat_service.py
app/tests/: test_chat_service.py  test_incident_detection_service.py  test_incident_suggestion_service.py
