[project]
name = "inference"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.136.3",
    "instructor>=1.15.1",
    "openai>=2.41.0",
    "pydantic-settings>=2.14.1",
    "pytest>=9.0.3",
    "requests>=2.34.2",
]
